--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>hsqldb</artifactId>
             <version>2.3.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>7.2.1.jre11</version>
+        </dependency>
     </dependencies>
     <build>
         <testResources>
