--- a/src/main/conf/my-application-conf.json
+++ b/src/main/conf/my-application-conf.json
@@ -1,5 +1,5 @@
 {
     "http.port" : 8080,
-    "url": "jdbc:hsqldb:file:db/whiskies",
-    "driver_class": "org.hsqldb.jdbcDriver"
-  }
+    "url": "jdbc:sqlserver://DRIVE:1443;databaseName=Demo;trusted_connection=true",
+    "driver_class": "com.microsoft.sqlserver.jdbc.SQLServerDriver"
+}
