YES! Managed to connect to database AND retrieve "Faturas"

--- a/src/main/conf/my-application-conf.json
+++ b/src/main/conf/my-application-conf.json
@@ -1,5 +1,5 @@
 {
     "http.port" : 8080,
-    "url": "jdbc:sqlserver://DRIVE:1443;databaseName=Demo;trusted_connection=true",
+    "url": "jdbc:sqlserver://DRIVE;databaseName=Demo;integratedSecurity=true",
     "driver_class": "com.microsoft.sqlserver.jdbc.SQLServerDriver"
 }
