--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.vertx.blog</groupId>
-    <artifactId>my-first-app</artifactId>
+    <artifactId>armis-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
