Created tests and functioning config file, replacing "magic strings" throughout the app

--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,16 @@ and stop them afterward -->
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>0.5.6</version>
+                <configuration>
+                    <processTypes>
+                        <web>java $JAVA_OPTS -Dhttp.port=$PORT -jar target/heroku-example-${project.version}-fat.jar</web>
+                    </processTypes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <profiles>
